--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "3.0.23",
   "description": "A package for loading the calendar and search module from bukazu loading into a react app.",
   "repository": "https://github.com/BUKAZU/React-portal",
+  "supportedLocales": [
+    "de",
+    "fr",
+    "en",
+    "es",
+    "it",
+    "nl"
+  ],
   "scripts": {
+    "extract": "formatjs extract",
     "test": "jest",
     "test-cypress": "cypress open",
     "build": "vite build",
@@ -21,6 +30,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.18.6",
+    "@formatjs/cli": "^6.1.0",
     "@jest/globals": "^29.4.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
@@ -31,7 +41,8 @@
     "cypress": "^12.4.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-formatjs": "^4.10.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
@@ -44,7 +55,6 @@
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.3.1",
     "process": "^0.11.10",
-    "react": "^16.4.1",
     "react-dom": "^16.14.0",
     "resolve": "1.6.0",
     "ts-jest": "^29.0.5",
