--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^29.4.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -44,8 +46,8 @@
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.3.1",
     "process": "^0.11.10",
-    "react": "^16.4.1",
-    "react-dom": "^16.14.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "resolve": "1.6.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
