--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
+    "@appsignal/javascript": "^1.3.26",
+    "@appsignal/react": "^1.0.22",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "graphql": "^15.6.0",
