--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.14.0",
     "resolve": "1.6.0",
+    "tailwindcss": "^3.4.14",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
