--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "Bob van Oorschot",
   "license": "MIT",
+  "type": "module",
   "peerDependencies": {
     "react": "^16.14.0 || ^17.0.2 || ^18.0.0",
     "react-dom": "^16.14.0 || ^17.0.2 || ^18.0.0"
@@ -25,7 +26,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.13",
     "chalk": "1.1.3",
     "eslint": "^8.49.0",
@@ -46,7 +47,7 @@
     "resolve": "1.6.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4",
+    "vite": "^5.4.20",
     "whatwg-fetch": "2.0.3"
   },
   "dependencies": {
