--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,33 +1,48 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Release npm package
 
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
+    inputs:
+      update_type:
+        required: true
+        description: patch/minor/major
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+         packages: write
+         contents: write
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
           node-version: 16
+          cache: 'npm'
+          registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm test
 
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+         packages: write
+         contents: write
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
           node-version: 16
+          cache: 'npm'
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm run build
+      - run: npm version $UPDATE_TYPE -m "Released new NPM package version: %s"
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
