--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -48,10 +48,17 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
       - name: Bump version
         run: |
-          npm version ${{inputs.update_type}} --no-git-tag-version
+          npm version ${{inputs.update_type}} --no-git-tag-version          
+      - name: Get new version
+        id: package_version
+        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+      - name: Make branch with new version
+        run: |
+          git checkout -b v${{ env.VERSION }}
           git add package.json
           git commit -m "ACTION: Bump version to $(node -p "require('./package.json').version")"
-          git push --force-with-lease
+          git push
+          git checkout master
       - run: npm ci
       - run: npm run build
       - run: npm publish
