--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           git checkout -b v${{ env.VERSION }}
           git add package.json
-          git commit -m "ACTION: Bump version to $(node -p "require('./package.json').version")"
+          git commit -m "chore: Bump version to v${{ env.VERSION }}
           git push -u origin v${{ env.VERSION }}
           git checkout master
       - run: npm ci
