--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -56,12 +56,12 @@ jobs:
         run: |
           git checkout -b v${{ env.VERSION }}
           git add package.json
-          git commit -m "chore: Bump version to v${{ env.VERSION }}
+          git commit -m "chore: Bump version to v${{ env.VERSION }}"
           git push -u origin v${{ env.VERSION }}
           git checkout master
       - run: npm ci
       - run: npm run build
-      - run: npm publish
+      - run: npm publish --tag ${{ env.VERSION }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - name: Create GitHub Release
