--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -61,7 +61,7 @@ jobs:
           git checkout master
       - run: npm ci
       - run: npm run build
-      - run: npm publish --tag ${{ env.VERSION }}
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - name: Create GitHub Release
