--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.24.0",
     "fs-extra": "3.0.1",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^30.2.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.0",
     "postcss-import": "^16.1.1",
