--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "MIT",
   "type": "module",
   "peerDependencies": {
-    "react": "^16.14.0 || ^17.0.2 || ^18.0.0",
-    "react-dom": "^16.14.0 || ^17.0.2 || ^18.0.0"
+    "react": "^16.14.0 || ^17.0.2 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.14.0 || ^17.0.2 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
