fix: correct formatting of registry-url in npm-publish workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -38,7 +38,8 @@ jobs:
         with:
           node-version: 22
           cache: 'npm'
-          registry-url: https://registry.npmjs.org/      
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci  
       - run: npm run build
       - run: npm publish
         env:
