feat: implement SearchPageWrapper component and enhance search functionality with new queries and responsive styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 /// <reference types="vite/client" />
-
 {
   "compilerOptions": {
     "target": "es6",
@@ -13,5 +12,7 @@
     "isolatedModules": true,
     "esModuleInterop": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
